# sfml-projects

./: README.md
pong/: .clang-format  CMakeLists.txt
pong/src/: ball.cpp  ball.hpp  bat.cpp  bat.hpp  game.cpp  game.hpp  main.cpp
